syntax = "proto3";

package plugin;

option go_package = "github.com/tblang/core/pkg/plugin/proto";

// Provider service definition
service Provider {
  rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);
  rpc Configure(ConfigureRequest) returns (ConfigureResponse);
  rpc PlanResourceChange(PlanResourceChangeRequest) returns (PlanResourceChangeResponse);
  rpc ApplyResourceChange(ApplyResourceChangeRequest) returns (ApplyResourceChangeResponse);
  rpc ReadResource(ReadResourceRequest) returns (ReadResourceResponse);
  rpc ImportResource(ImportResourceRequest) returns (ImportResourceResponse);
  rpc ValidateResourceConfig(ValidateResourceConfigRequest) returns (ValidateResourceConfigResponse);
}

// Schema definitions
message Schema {
  int64 version = 1;
  SchemaBlock block = 2;
}

message SchemaBlock {
  map<string, Attribute> attributes = 1;
  map<string, BlockType> block_types = 2;
}

message Attribute {
  string type = 1;
  string description = 2;
  bool required = 3;
  bool optional = 4;
  bool computed = 5;
  bool sensitive = 6;
}

message BlockType {
  string nesting_mode = 1;
  SchemaBlock block = 2;
  int64 min_items = 3;
  int64 max_items = 4;
}

// Request/Response messages
message GetSchemaRequest {}

message GetSchemaResponse {
  Schema provider = 1;
  map<string, Schema> resource_schemas = 2;
  map<string, Schema> data_source_schemas = 3;
  repeated Diagnostic diagnostics = 4;
}

message ConfigureRequest {
  string terraform_version = 1;
  DynamicValue config = 2;
}

message ConfigureResponse {
  repeated Diagnostic diagnostics = 1;
}

message PlanResourceChangeRequest {
  string type_name = 1;
  DynamicValue prior_state = 2;
  DynamicValue proposed_new_state = 3;
  DynamicValue config = 4;
  bytes prior_private = 5;
}

message PlanResourceChangeResponse {
  DynamicValue planned_state = 1;
  repeated string requires_replace = 2;
  bytes planned_private = 3;
  repeated Diagnostic diagnostics = 4;
}

message ApplyResourceChangeRequest {
  string type_name = 1;
  DynamicValue prior_state = 2;
  DynamicValue planned_state = 3;
  DynamicValue config = 4;
  bytes planned_private = 5;
}

message ApplyResourceChangeResponse {
  DynamicValue new_state = 1;
  bytes private = 2;
  repeated Diagnostic diagnostics = 3;
}

message ReadResourceRequest {
  string type_name = 1;
  DynamicValue current_state = 2;
  bytes private = 3;
}

message ReadResourceResponse {
  DynamicValue new_state = 1;
  bytes private = 2;
  repeated Diagnostic diagnostics = 3;
}

message ImportResourceRequest {
  string type_name = 1;
  string id = 2;
}

message ImportResourceResponse {
  repeated ImportedResource imported_resources = 1;
  repeated Diagnostic diagnostics = 2;
}

message ImportedResource {
  string type_name = 1;
  DynamicValue state = 2;
  bytes private = 3;
}

message ValidateResourceConfigRequest {
  string type_name = 1;
  DynamicValue config = 2;
}

message ValidateResourceConfigResponse {
  repeated Diagnostic diagnostics = 1;
}

// Helper messages
message Diagnostic {
  string severity = 1;
  string summary = 2;
  string detail = 3;
}

message DynamicValue {
  bytes json = 1;  // JSON-encoded value for flexibility
}